tests/smt2/error/arg_mismatch2.smt2
(declare-fun f (Bool Bool) Bool)
(assert (f true))